syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc/proto/gen/go/common";

// 注释类型
enum IDEAAnnotateType {
  IDEAAnnotateTypeComment = 0;   //  注释
  IDEAAnnotateTypeRect = 1;     // 矩形
  IDEAAnnotateTypeIOSDraw = 2; // IOS笔触笔记
  IDEAAnnotateTypeHotRect = 3; // 热门选区
  IDEAAnnotateTypeTextBox = 4; // 文本框
  IDEAAnnotateTypeDrawV2 = 5; // 手写笔记v2
};