syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc/proto/gen/go/common";

message ShapeAnnotation {
  string uuid = 1;
  ShapeType type = 2;

  /**
   * 当type为rectangle、text时，x、y为图形左上角位置
   * 当type为ellipse时，x、y为圆心位置
   * 当type为arrow时，x、y为箭头起点位置
   **/
  double x = 3;
  double y = 4;

  AnnotationColor strokeColor = 5;

  /** 当type为retangle时，width属性代表宽度 */
  double width = 6;
  /** 当type为retangle时，height属性代表高度 */
  double height = 7;

  /** 当type为ellipse时，radiusX为横向半径 */
  double radiusX = 8;
  /** 当type为ellipse时，radiusY为纵向半径 */
  double radiusY = 9;

  /**
   * 当type为arrow时，endX、endY为箭头终点位置
   */
  double endX = 10;
  double endY = 11;
  // 所在页数
  uint32 pageNumber = 12;

  //更新时需要传该参数
  optional string shapeId = 13;

}

enum AnnotationColor {
  other = 0;
  blue = 1;
  yellow = 2;
  red = 3;
  green = 4;
  black = 5;
}

enum ShapeType {
  rectangle = 0;
  ellipse = 1;
  arrow = 2;
}